--- a/test/embedded_test.html
+++ b/test/embedded_test.html
@@ -8,8 +8,8 @@
   <body>
     <div id="container"></div>
     <script>
-      dc.embed.load('http://dev.dcloud.org/search/embed/', {
-        q: "projectid: 3224-test ",
+      dc.embed.load('http://www.documentcloud.org/search/embed/', {
+        q: "projectid: 4478-2012advault",
         container: "#container",
         title: "",
         order: "score",
